# kle2netlist

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml  setup.cfg
.github/workflows/: build.yml
docker/: README.md
kicad-templates/atmega32u4-au-v1/: atmega32u4-au-v1.kicad_pcb
kle2netlist/: __init__.py  __main__.py  skidl.py
src/kle2netlist/: __init__.py  __main__.py  skidl.py
tests/: test_netlist_generation.py  test_skidl.py
tests/test_netlist_generation/: 2x2-ai03-2725-MX_Alps_Hybrid-Alps.net  2x2-ai03-2725-MX_Alps_Hybrid-MX-Alps-Hybrid.net  2x2-ai03-2725-MX_Alps_Hybrid-MX.net  2x2-perigoso-Switch_Keyboard-Alps.net  2x2-perigoso-Switch_Keyboard-MX-Alps-Hybrid.net  2x2-perigoso-Switch_Keyboard-MX.net  2x2-with-uc.net  2x2.json  2x2.net  empty-with-uc.net  empty.json  iso-enter.json  iso-enter.net  key-with-stabilizer.net
