# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "kle2netlist"
version = "0.2"
description = "KiCad netlist generator for mechanical keyboards "
readme = "README.md"
include = ["kle2netlist/data"]
authors = [
  "kle2netlist <adamws@users.noreply.github.com>"
]
license = "MIT"
repository = "https://github.com/adamws/kle2netlist"
homepage = "https://github.com/adamws/kle2netlist"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"kle2netlist" = "kle2netlist.__main__:app"

[tool.poetry.dependencies]
python = "^3.8.1"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.5.2"
skidl = "1.0.0"

[tool.poetry.dev-dependencies]
darglint = "^1.8.1"
isort = "^5.12.0"
pyupgrade = "^3.10.1"
black = "^23.7.0"
mypy = "^1.5.1"
bandit = "^1.7.5"
safety = "^2.3.5"
pytest = "^7.4.0"
pylint = "^2.17.5"
pydocstyle = "^6.3.0"
pre-commit = "^3.3.3"
Jinja2 = "^3.1.2"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
